@@ -9,6 +9,7 @@ Version 2.0.0 - SVN
  - Replaced compare script by C program with better diff display.
  - Use AJAX instead of iframe to notify team/jury of new clarifications.
  - Added some security improvements to runguard.
+ - Drop dependency on tempfile during distclean.
 
 Version 2.0.0 Release Candidate 2 - 25 June 2007
 ------------------------------------------------
